_sass/partials/components/_card.scss
// Component card
.c-card {
  padding: 1em;
  background-color: white;
  margin-top: 1em;
  margin-bottom: 1em;

  &.c-card--inverted-outline {
    border: 3px solid white;
    outline: 3px solid $grey--background;
    outline-offset: -6px;
  }
}

.icon-card {
  text-align: center;
  padding-bottom: 10px;
  padding-top: 10px;
  border: 2px solid #ebf2f2;
  flex: 0 0 23%;
  max-width: 23%;

  @include media-breakpoint-up(md) {
    padding-bottom: 60px;
    padding-top: 60px;
  }
}

.icon-card:hover {
  transform: translateY(-3px);
  top: -3px;
  box-shadow: 0 10px 20px 0 rgba(108,135,135,.2);
}

.icon-card__icon {
  margin-bottom: 20px;

  img {
    height: 85px;
    width: auto;
  }
}

.icon-card__title {
  font-family: $fontFamily-semibold;
  margin-bottom: 15px;
  color: $blue--darkest;
  h4 {
    font-size: 2.5rem;
  }
}

.icon-card__description {
  font-family: $fontFamily-medium;
  color: $black;
}

.icon-card__description:hover {
  color: $black;
}

.icon-card_row {
  margin: 20px 0;
}

.how-it-works--nav-tabs {
  border: none;
  .nav-link.active {
    color: $black;
    border-color: transparent;
    border-bottom: solid 2px $grey--background;
  }
  .nav-link {
    color: $grey-dash;
  }
  .nav-link:hover {
    border-color: transparent;
  }
}

